      in the target are deleted, not just unversioned (Aaron Bentley)

    * When trying to acquire a lock, don't fail immediately. Instead, try
      a few times (up to 1 hour) before timing out. Also, report why the
      lock is unavailable (John Arbash Meinel, #43521, #49556)

    * Leave HttpTransportBase daughter classes decides how they
      implement cloning. (Vincent Ladeuil, #61606)

   * diff3 does not indicate conflicts on clean merge. (Aaron Bentley)

  TESTING:

    * New test base class TestCaseWithMemoryTransport offers memory-only
      testing facilities: its not suitable for tests that need to mutate disk
      state, but most tests should not need that and should be converted to
      TestCaseWithMemoryTransport. (Robert Collins)

    * ``TestCase.make_branch_and_memory_tree`` now takes a format
      option to set the BzrDir, Repository and Branch formats of the
      created objects. (Robert Collins, John Arbash Meinel)

bzr 0.11  2006-10-02

    * Smart server transport test failures on windows fixed. (Lukáš Lalinský).

bzr 0.11rc2  2006-09-27

  BUG FIXES:

    * Test suite hangs on windows fixed. (Andrew Bennets, Alexander Belchenko).
    
    * Commit performance regression fixed. (Aaron Bentley, Robert Collins, John
      Arbash Meinel).

bzr 0.11rc1  2006-09-25

  IMPROVEMENTS:

    * Knit files now wait to create their contents until the first data is
      added. The old code used to create an empty .knit and a .kndx with just
      the header. However, this caused a lot of extra round trips over sftp.
      This can change the time for ``bzr push`` to create a new remote branch
      from 160s down to 100s. This also affects ``bzr commit`` performance when
      adding new files, ``bzr commit`` on a new kernel-like tree drops from 50s
      down to 40s (John Arbash Meinel, #44692)

    * When an entire subtree has been deleted, commit will now report that
      just the top of the subtree has been deleted, rather than reporting